--- a/Feedbacksystem/templates/pages/evaluate_subject_faculty.html
+++ b/Feedbacksystem/templates/pages/evaluate_subject_faculty.html
@@ -360,19 +360,19 @@
     
     <h3> Suggestions for Improvement</h3>
     
-    <div  style="margin-top: 2em;">
+    <div style="margin-top: 2em;">
         <h4>The course should: </h4>
-        <div class="likert-horizontal custom-radio ">
+        <div class="likert-horizontal custom-radio">
             <div class="form-check">
-                <input type="radio" id="id_credit_task_preference_0" name="credit_task_preference" value="option1" class="form-radio">
-                <label for="id_credit_task_preference_0" class="form-check-label">Requires less talk for the credit</label>
+                <input type="radio" id="id_credit_task_preference_0" name="credit_task_preference" value="True" class="form-radio">
+                <label for="id_credit_task_preference_0" class="form-check-label">Requires less task for the credit</label>
             </div>
             <div class="form-check">
-                <input type="radio" id="id_credit_task_preference_1" name="credit_task_preference" value="option2" class="form-radio">
-                <label for="id_credit_task_preference_1" class="form-check-label">Requires more talk for the credit</label>
-            </div>
+                <input type="radio" id="id_credit_task_preference_1" name="credit_task_preference" value="False" class="form-radio">
+                <label for="id_credit_task_preference_1" class="form-check-label">Requires more task for the credit</label>
             </div>
         </div>
+    </div>
     
     
     </div>
