--- a/Feedbacksystem/templates/pages/webinar_seminar_form.html
+++ b/Feedbacksystem/templates/pages/webinar_seminar_form.html
@@ -15,7 +15,12 @@
             <table class="table table-bordered table-responsive  " style="margin-top: 1em;">
                 <tr>
                     <th  scope="col" style="color:#fafafa;  background: #2a9134">I. Overall Evaluation </th>
-                    <th  scope="col" style="color:#fafafa;  background: #2a9134"><div style="display: flex; white-space: pre; width: 50%;"><div style="width: 5em;margin-left: 3em;">Outstanding </div>          <div style="width: 100%; margin-left: 4em;">Very Satisfactory</div>      <div style="width: 100%; margin-right: 3.5em; margin-left:3em;">Satisfactory</div> <div style="width: 100%; margin-right: 5em;">Unsatisfactory</div>        <div style="width: 100%; margin-right: 2em;">Poor</div> </th>
+                    <th  scope="col"><div style="display: flex; white-space: pre;">
+                        <div style="width: 5em;margin-left: 3.5em;">Outstanding </div>          
+                        <div style="width: 100%; margin-left: 4em;">Very Satisfactory</div>      
+                        <div style="width: 100%; margin-right: 3.5em; margin-left:3em;">Satisfactory</div> 
+                        <div style="width: 100%; margin-right: 5em;">Unsatisfactory</div>        
+                        <div style="width: 100%; margin-right: 2.4em;">Poor</div> </th>
                 </tr>
                 {% for question in questions %}
                 <tr>
