--- a/Feedbacksystem/static/css/admin_page.css
+++ b/Feedbacksystem/static/css/admin_page.css
@@ -8,6 +8,10 @@ th{
   color: #ffffff !important; 
   background-color: #2a9134 !important;
 }
+.table-responsive td, th {
+  vertical-align: middle; /* Center content vertically */
+  padding: 0.8em;
+}
 hr{
   border: none;
   border-bottom: 2px solid #ff9400;
@@ -177,7 +181,7 @@ background-color: #ff9400;
   overflow-x:hidden !important;
 }
 }
-@media (max-width: 992px){
+@media (max-width: 1200px){
 #sidebar {
       margin-left: -250px; /* Adjust based on sidebar width */
 }
