--- a/Feedbacksystem/templates/pages/adminlogin.html
+++ b/Feedbacksystem/templates/pages/adminlogin.html
@@ -11,7 +11,7 @@
   
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="icon" href="static/images/cvsulogo.png" type="image/png">
-  <link rel="stylesheet" href="{% static 'css/login.css'%}">
+  <link rel="stylesheet" href="{% static 'css/login_page.css'%}">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <style>
     input[type="submit"] {
@@ -25,13 +25,16 @@
 </head>
 <body>
   {% if messages %}
-  <ul class="messages">
+  <div class="container  col-md-5 col-12 mt-4">
       {% for message in messages %}
-      <li>{{ message }}</li>
+          <div class="alert alert-danger alert-dismissible fade show" role="alert">
+              {{ message }}
+              <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+          </div>
       {% endfor %}
-  </ul>
+  </div>
   {% endif %}
-    <div class="container">
+<div class="container-body">
    
 <form method="POST" action="">
     {% csrf_token %}
