--- a/Feedbacksystem/templates/pages/adminregister.html
+++ b/Feedbacksystem/templates/pages/adminregister.html
@@ -11,11 +11,14 @@
 <hr>
 {% block feature %}
 {% if messages %}
-<ul class="messages">
-    {% for message in messages %}
-    <li>{{ message }}</li>
-    {% endfor %}
-</ul>
+    <div class="container">
+        {% for message in messages %}
+            <div class="alert {% if message.tags %}alert-{{ message.tags }}{% else %}alert-info{% endif %} alert-dismissible fade show" role="alert">
+                {{ message }}
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+        {% endfor %}
+    </div>
 {% endif %}
 <form method="POST" action="">
     {% csrf_token %}
