--- a/Feedbacksystem/templates/pages/courses.html
+++ b/Feedbacksystem/templates/pages/courses.html
@@ -10,6 +10,16 @@
 {% endblock header %}
 <hr>
 {% block feature %}
+{% if messages %}
+ 
+{% for message in messages %}
+    <div class="alert {% if message.tags %}alert-{{ message.tags }}{% else %}alert-info{% endif %} alert-dismissible fade show" role="alert">
+        {{ message }}
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+{% endfor %}
+
+{% endif %}
 <a class="btn btn-warning custom-btn"  data-bs-toggle="modal" data-bs-target="#exampleModal" style = "color: black; text-decoration: none;"><i class="bi bi-plus-square-fill"></i> <b>Add Course</b></a>
 
 <!-- Modal -->
@@ -30,25 +40,28 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <input type = "submit" value="Add" class="btn btn-warning">
+          <input type = "submit" value="Add" class="btn custom-btn">
             </form>
         </div>
       </div>
     </div>
   </div>
-<br>
-<br>
-<table class="table table-bordered table-responsive  ">
+
+<table class="table table-bordered table-responsive  mt-2">
     <tr>
-        <th  scope="col">COURSE </th>
+        <th  scope="col">Course</th>
      
-        <th  scope="col">OPTIONS </th>
+        <th  scope="col">Options</th>
     </tr>
     {% for i in course %}
     <tr>
         <td>{{ i.name }}</td>
-        <td style="display: flex; flex-direction: row;"> <a style="margin-right: 10px;" href="{% url 'editcourse'  i.pk  %}"><button class="btn btn-warning" style=" padding:3px 5px 3px 5px"><i class="bi bi-pencil-square" style="font-size:20px"></i></button></a>
-          <a style="margin-right: 10px;" href="{% url 'deleteCourse'  i.pk  %}"><button class="btn btn-danger" ><i style="font-size:20px" class='bx bxs-trash' ></i></button></a>
+        <td style="display: flex; flex-direction: row; align-items: center;"> 
+
+          <a style="margin-right: 10px; text-decoration: none;" href="{% url 'editcourse'  i.pk  %}"><button class="btn btn-warning d-flex align-items-center" style=" padding:1px 7px 1px 7px"><i class="bi bi-pencil-square" style="font-size:20px; margin-right: 5px;"></i>Edit</button></a>
+          
+          <a style="margin-right: 10px; text-decoration: none;" href="{% url 'deleteCourse'  i.pk  %}"><button class="btn btn-danger d-flex align-items-center" style="padding:4px 7px 4px 7px"  ><i style="font-size:20px; margin-right: 5px;" class='bx bxs-trash' ></i>Delete</button></a>
+
         </td>
     </tr>
 
