--- a/Feedbacksystem/templates/pages/departments.html
+++ b/Feedbacksystem/templates/pages/departments.html
@@ -10,6 +10,16 @@
 {% endblock header %}
 <hr>
 {% block feature %}
+{% if messages %}
+ 
+{% for message in messages %}
+    <div class="alert {% if message.tags %}alert-{{ message.tags }}{% else %}alert-info{% endif %} alert-dismissible fade show" role="alert">
+        {{ message }}
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+{% endfor %}
+
+{% endif %}
 <button type="button" class="btn btn-warning custom-btn" data-bs-toggle="modal" data-bs-target="#exampleModal" style = "color: black; text-decoration: none;"><i class="bi bi-plus-square-fill nav-icon"></i> <b>Add Department</b></button>
 
 <!-- Modal -->
@@ -35,21 +45,23 @@
     </div>
   </div>
 
-<br>
-<br>
-<div class="table-responsive">
+<div class="table-responsive mt-2">
   <table class="table table-bordered table-responsive " >
       <tr>
-          <th  scope="col">DEPARTMENT </th>
+          <th  scope="col">Department</th>
   
-          <th  scope="col">OPTIONS </th>
+          <th  scope="col">Options</th>
       </tr>
       {% for i in page_obj %}
       <tr>
           <td>{{ i.name }}</td>
-          <td style="display: flex; flex-direction: row; gap:1em;"> <a href="{% url 'view_department' i.pk %}"><button class="btn btn-primary" style=" padding:3px 5px 3px 5px"><i class="bi bi-eye-fill" style="font-size:20px"></i> </button></a> <a href="{% url 'edit_department' i.pk %}"><button class="btn btn-warning" style=" padding:3px 5px 3px 5px"><i class="bi bi-pencil-square" style="font-size:20px"></i></button></a>
-            <a href="{% url 'delete_department' i.pk %}"><button class="btn btn-danger" ><i style="font-size:20px" class='bx bxs-trash' ></i></button></a>
-          </td>
+          <td style="display: flex; flex-direction: row; gap:1em; align-items: center; height: 100px;"> <a href="{% url 'view_department' i.pk %}" style="text-decoration: none;"><button class="btn btn-primary d-flex align-items-center" style=" padding:1px 7px 1px 7px"><i class="bi bi-eye-fill" style="font-size:20px; margin-right: 5px;"></i> View</button></a>
+
+            <a href="{% url 'edit_department'  i.pk  %}" style="text-decoration: none;"><button class="btn btn-warning d-flex align-items-center" style=" padding:1px 7px 1px 7px"><i class="bi bi-pencil-square" style="font-size:20px; margin-right: 5px;"></i>Edit</button></a>
+
+            <a href="{% url 'delete_department'  i.pk  %}" style="text-decoration: none;"><button class="btn btn-danger d-flex align-items-center" style="padding:4px 7px 4px 7px" ><i style="font-size:20px; margin-right: 5px;" class='bx bxs-trash' ></i>Delete</button></a>
+
+            </td>
       </tr>
   
       {% endfor %}
