--- a/Feedbacksystem/templates/pages/facultydashboard.html
+++ b/Feedbacksystem/templates/pages/facultydashboard.html
@@ -93,7 +93,7 @@
     <div id="eval" class = "container">
       <h3>Academic Year: 2024-2025</h3>
       <h4>Semester: 1st</h4>
-      <h4>Student Evaluation for Teachers: {% if evaluation_status.evaluation_status %} In Progress {% else %} Concluded {% endif %}  </h4>
+      <h4>Student Evaluation for Teachers: {% if evaluation_status.evaluation_status %} In Progress {% else %} Closed {% endif %}  </h4>
      </div>
     {% endblock header %}
    
