--- a/Feedbacksystem/templates/pages/facultylogin.html
+++ b/Feedbacksystem/templates/pages/facultylogin.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="icon" href="static/images/cvsulogo.png" type="image/png">
-    <link rel="stylesheet" href="{%static 'css/login.css' %}">
+    <link rel="stylesheet" href="{%static 'css/login_page.css' %}">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
  
     <title>Feedback and Evaluation System - CvSU Bacoor Campus</title>
@@ -16,13 +16,16 @@
 
 <body>
     {% if messages %}
-    <ul class="messages">
+    <div class="container  col-md-5 col-12 mt-4">
         {% for message in messages %}
-        <li>{{ message }}</li>
+        <div class="alert {% if message.tags %}alert-{{ message.tags }}{% else %}alert-info{% endif %} alert-dismissible fade show" role="alert">
+            {{ message }}
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
         {% endfor %}
-    </ul>
+    </div>
     {% endif %}
-    <div class="container" id="container">
+    <div class="container-body" id="container">
         
         <div class="form-container sign-up" {% if request.POST and 'register' in request.POST %} id="active" {% endif %}>
             <form method="POST" action="">
