--- a/Feedbacksystem/templates/pages/home.html
+++ b/Feedbacksystem/templates/pages/home.html
@@ -11,7 +11,7 @@
   
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="icon" href="static/images/cvsulogo.png" type="image/png">
-  <link rel="stylesheet" href="{% static 'css/studentpage.css'%}">
+  <link rel="stylesheet" href="{% static 'css/student_page.css'%}">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
@@ -50,37 +50,45 @@
       <ul class="nav flex-column nav-pills">
         <li class="nav-item">
           <a class="nav-link {% if request.path == '/home' %} active {% endif %}" href="/home">
-            <i class="bi bi-house-fill nav-icon"></i> <b>HOME</b>     
+            <i class="bi bi-house-fill nav-icon"></i> <b>Home</b>     
         </a>
       </li>
        
         <li class="nav-item">
           <a class="nav-link {% if request.path == '/student_profile' %} active {% endif %}" href="{% url 'student_profile' %}">
-            <i class="bi bi-person-lines-fill nav-icon"> </i> <b>PROFILE</b>
+            <i class="bi bi-person-lines-fill nav-icon"> </i> <b>Profile</b>
               </a>
         </li>
         <li class="nav-item dropdown">
           <button class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <i class="bi bi-chat-left-fill nav-icon"></i> EVALUATE
+            <i class="bi bi-chat-left-fill nav-icon"></i> Evaluate
           </button>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="{% url 'facultyeval' %}">Faculty</a>
               <a class="dropdown-item" href="{% url 'eventhub' %}">Events</a>
       </li>
+      
+      {% if is_president %}
+        <li class="nav-item">
+          <a class="nav-link {% if request.path == '/society_president_events' %} active {% endif %}" href="{% url 'society_president_events' %}">
+            <i class="bi bi-calendar-event"></i> <b>Events</b>
+          </a>
+        </li>
+      {% endif %}
         <li class="nav-item">
           <a class="nav-link {% if request.path == '/about' %} active {% endif %}" href="{% url 'about' %}">
-            <i class="bi bi-info-circle-fill nav-icon"></i> <b>ABOUT</b>
+            <i class="bi bi-info-circle-fill nav-icon"></i> <b>About</b>
           </a>
         </li>
         <li class="nav-item">
           <a class="nav-link {% if request.path == '/contactUs' %} active {% endif %}" href="{% url 'contactUs' %}">
-            <i class="bi bi-telephone-fill nav-icon"></i> <b>CONTACT US</b>
+            <i class="bi bi-telephone-fill nav-icon"></i> <b>Contact us</b>
           </a>
         </li>
         <!-- Add more navigation items here -->
         <li class="nav-item">
           <a class="nav-link" href="{% url 'studentlogout' %}">
-            <i class="bi bi-box-arrow-in-left nav-icon"></i> <b>LOG OUT</b>
+            <i class="bi bi-box-arrow-in-left nav-icon"></i> <b>Logout</b>
           </a>
       </li>
     </ul>
@@ -91,7 +99,7 @@
     <div id="eval" class = "container">
       <h3>Academic Year: {{ evaluation_status.academic_year }}</h3>
       <h4>Semester: {{ evaluation_status.semester }}</h4>
-      <h4>Student Evaluation for Teachers: {% if evaluation_status.evaluation_status %} In Progress {% else %} Closed {% endif %} </h4>
+      <h4>Student Evaluation for Teachers: {{evaluation_status.evaluation_status}} </h4>
      </div>
     {% endblock header %}
    
@@ -99,7 +107,7 @@
     <div class="container">
       <h2 class="mt-4 mb-4 success">Pending Evaluations</h2>
       <div class="row">
-      {% if completed_count != total_faculty %}
+        {% if completed_count != total_faculty or unevaluated_events %}
         <div class="col-md-3 mb-4">
           <div class="card border-0">
               <img src="{% static 'images/cvsu_thumbnail.jpg' %}" class="card-img-top" alt="Default Image">
@@ -110,8 +118,7 @@
               </div>
           </div>
       </div>
-      {% endif %}
-      {% if unevaluated_events %}
+      
           {% for event in page_obj %}
           <div class="col-md-3 mb-4">
               <div class="card border-0">
@@ -161,6 +168,7 @@
       {% else %}
         <p>You have no pending evaluations.</p>
       {% endif %}
+
   </div>
   
     
