--- a/Feedbacksystem/templates/pages/login.html
+++ b/Feedbacksystem/templates/pages/login.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="icon" href="static/images/cvsulogo.png" type="image/png">
-    <link rel="stylesheet" href="{%static 'css/login.css' %}">
+    <link rel="stylesheet" href="{%static 'css/login_page.css' %}">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
    
     <title>Feedback and Evaluation System - CvSU Bacoor Campus</title>
@@ -16,13 +16,16 @@
 
 <body>
     {% if messages %}
-    <ul class="messages">
+    <div class="container  col-md-5 col-12 mt-5 pt-5">
         {% for message in messages %}
-        <li>{{ message }}</li>
+        <div class="alert alert-primary alert-dismissible fade show" role="alert">
+            {{ message }}
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
         {% endfor %}
-    </ul>
+    </div>
     {% endif %}
-    <div class="container" id="container">
+    <div class="container-body" id="container">
         
         <div class="form-container sign-up" {% if request.POST and 'register' in request.POST %} id="active" {% endif %}>
             <form method="POST" action="">
@@ -89,6 +92,13 @@
             </div>
         </div>
     </div>
+<div class="row align-items-center justify-content-center g-0">
+    <div class="col-lg-10 col-md-9 col-sm-9 col-9">
+        <p class="feedback-note">For visitors, Share your experience by filling out our <b>Stakeholder Feedback Form</b> to help us improve our services. Simply scan the QR code or <a href="{% url 'stakeholder_feedback_form' %}">click here</a> to get started.</p>
+    </div>
+    <div class="col-lg-2 col-md-2 col-sm-2 col-3 stakeholderform_qrcode "><img src="{% static 'images/stakeholderform.jpg' %}" alt="cvsu bacoor stakeholder form qr code" height="80px" width="80px"></div>
+</div>
+
 <script src="{%static 'js/scripts.js' %}">
 </script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
