--- a/Feedbacksystem/templates/pages/view_department.html
+++ b/Feedbacksystem/templates/pages/view_department.html
@@ -11,32 +11,58 @@
 <hr>
 {% block feature %}
 <a class="btn btn-warning custom-btn" style = "color: black;" href="{}"> <i class="bi bi-person-plus-fill"></i> <b>Add Faculty</b></a>
-<br>
-<br>
-    <table class="table table-responsive table-bordered">
+    <table class="table table-responsive table-bordered mt-2">
 
             <tr>
-                <th scope="col">FACULTY</th>
-                <th  scope="col">GENDER </th>
-                <th  scope="col">EMAIL </th>
-                <th  scope="col">CONTACT NUMBER </th>
-                <th  scope="col">OPTIONS </th>
+                <th scope="col">Faculty</th>
+                <th scope="col">Gender</th>
+                <th scope="col">Email</th>
+                <th scope="col">Contact Number</th>
+                <th scope="col">Options</th>                
             </tr>
 
     </thead>
     <tr>
-        {% for i in faculties %}
+        {% for i in page_obj %}
             <td>{{ i.first_name }} {{ i.last_name }}</td> 
             <td>{{ i.gender }}</td>
             <td>{{ i.email }}</td>
             <td>{{ i.contact_number }}</td> 
-            <td style="display: flex; flex-direction: row; gap:1em"> <a href="{% url 'facultyevaluations' i.pk %}"><button class="btn btn-primary" style=" padding:3px 5px 3px 5px"><i class="bi bi-eye-fill" style="font-size:20px"></i> </button></a> <a href="{% url 'editteacher'  i.pk  %}"><button class="btn btn-warning" style=" padding:3px 5px 3px 5px"><i class="bi bi-pencil-square" style="font-size:20px"></i></button></a>
-                <a href="{% url 'deleteTeacher'  i.pk  %}"><button class="btn btn-danger" ><i style="font-size:20px" class='bx bxs-trash' ></i></button></a>
-              </td>
+            <td style="display: flex; flex-direction: row; gap:1em; align-items: center;"> <a href="{% url 'facultyevaluations' i.pk %}" style="text-decoration: none;"><button class="btn btn-primary d-flex align-items-center" style=" padding:1px 7px 1px 7px"><i class="bi bi-eye-fill" style="font-size:20px; margin-right: 5px;"></i> View</button></a>
+
+                <a href="{% url 'editteacher'  i.pk  %}" style="text-decoration: none;"><button class="btn btn-warning d-flex align-items-center" style=" padding:1px 7px 1px 7px"><i class="bi bi-pencil-square" style="font-size:20px; margin-right: 5px;"></i>Edit</button></a>
+  
+                <a href="{% url 'deleteTeacher'  i.pk  %}" style="text-decoration: none;"><button class="btn btn-danger d-flex align-items-center" style="padding:4px 7px 4px 7px" ><i style="font-size:20px; margin-right: 5px;" class='bx bxs-trash' ></i>Delete</button></a>
+  
+                </td>
     </tr>
 
     {% endfor %}
     
     </table>
-
+    <nav aria-label="Page navigation">
+        <ul class="pagination justify-content-center">
+            {% if page_obj.has_previous %}
+            <li class="page-item">
+                <a class="page-link" href="?page={{ page_obj.previous_page_number }}" aria-label="Previous">
+                    <span aria-hidden="true">&laquo;</span>
+                </a>
+            </li>
+            {% endif %}
+      
+            {% for num in page_obj.paginator.page_range %}
+            <li class="page-item {% if page_obj.number == num %}active{% endif %}">
+                <a class="page-link" href="?page={{ num }}">{{ num }}</a>
+            </li>
+            {% endfor %}
+      
+            {% if page_obj.has_next %}
+            <li class="page-item">
+                <a class="page-link" href="?page={{ page_obj.next_page_number }}" aria-label="Next">
+                    <span aria-hidden="true">&raquo;</span>
+                </a>
+            </li>
+            {% endif %}
+        </ul>
+      </nav>
 {% endblock feature %}
